fix flash message gap bug

--- a/app/assets/stylesheets/maps/map.scss
+++ b/app/assets/stylesheets/maps/map.scss
@@ -51,12 +51,10 @@
   }
 }
 
-.map-flash {
-  .alert {
-    -webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-  }
+.map-flash.alert {
+  -webkit-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.4);
+  -moz-box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.4);
+  box-shadow: 0px 0px 10px 4px rgba(0,0,0,0.4);
   left: calc(50% - 100px);
   top: 70px;
 }
